# esbvaktin

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  EDITORIAL_PHILOSOPHY.md  ICELANDIC.md  METHODOLOGY.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
R/: 00_install_packages.R  01_hagstofa.R  02_eurostat.R  03_oecd.R  04_sedlabanki.R  05_fao.R  06_worldbank.R  07_eurlex.R
data/: rejected_urls.txt
knowledge/: eu_terms_is.md  exemplars_editorial_is.md  exemplars_is.md
scripts/: audit_claims.py  audit_evidence.py  backfill_article_dates.py  backfill_epistemic_type.py  backup_db.sh  build_article_registry.py  check_duplicate.py  check_evidence_urls.py  correct_icelandic.py  curate_speech_evidence.py  download_podcast.py  download_silfrid.py  entity_review_server.py  export_claims.py  export_entities.py  export_evidence.py  export_evidence_meta.py  export_overviews.py  export_topics.py  extract_entities.py  fact_check_speeches.py  fetch_panel_transcript.py  fix_ascii_claims.py  fix_audit_contradictions.py  fix_audit_findings.py  fix_evidence_urls.py  fix_sighting_drift.py  generate_evidence_is.py  generate_overview.py  improve_evidence_is.py  init_db.py  manage_inbox.py  migrate_claims_icelandic.py  migrate_entities.py  prepare_epistemic_batches.py  prepare_overview_context.py  prepare_site.py  prepare_speeches.py  publish_claims.py  reassess_claims.py  (+10 more)
tests/: conftest.py  test_assemble_report.py  test_attribution.py  test_claim_bank.py  test_entity_matcher.py  test_entity_registry.py  test_entity_review_api.py  test_evidence_ordering.py  test_export_smoke.py  test_gap_planner.py  test_hearsay_short_circuit.py  test_heimildin.py  test_icelandic_report.py  test_json_utils.py  test_metadata.py  test_models.py  test_normalise.py  test_operations.py  test_overview_pipeline.py  test_panel_context.py  test_panel_sightings.py  test_parse_outputs.py  test_pipeline_models.py  test_prepare_context.py  test_prepare_fact_check.py  test_retrieve_evidence.py  test_rrf_merge.py  test_slugify.py  test_speech_context.py  test_transcript.py  (+1 more)
(+212 files in other folders)
