[project]
name = "esbvaktin"
version = "0.1.0"
description = "Data-driven civic information platform for Iceland's EU membership referendum"
requires-python = ">=3.12"
dependencies = [
    "trafilatura>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "httpx>=0.27",
    "aiosqlite>=0.20.0",
    "mcp[cli]>=1.2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
embeddings = [
    "FlagEmbedding>=1.2,<2",
    "torch>=2.0,<3",
    "transformers>=4.41,<5",
]
icelandic = [
    "reynir-correct>=4.0,<5",
    "icegrams>=1.1",
    "islenska>=1.0",
    "reynir>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
email = [
    "requests>=2.32",
]
ghost = [
    "pyjwt>=2.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Long lines in SQL/prompts/string literals are more readable as-is

[tool.ruff.lint.per-file-ignores]
# Scripts use load_dotenv() before imports (intentional)
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
